# AdaCt

./: CMakeLists.txt  README.md  record.md
config/: param.yaml  param_vel.yaml
include/: types.h
include/AdaCt/: CloudFrame.cpp  CloudFrame.h  cloud_convert.hpp  costfunction.hpp  costfunction_se3.hpp  downSample.hpp  frame_info.hpp  frame_infoMultiMode.hpp  frame_info_segment.hpp  frame_info_usecommonPointType.hpp  frame_info_usecommonPointTypeOnly.hpp  kdmap copy.hpp  kdmap.hpp  optPose.hpp  optPoseMultiMode.hpp  trajectory.hpp  types.h  types.hpp  utility.h  voxelmap.hpp
include/ikd-Tree/: ikd_Tree.cpp  ikd_Tree.h
include/voxelmap/: pointType.h  voxel.hpp  voxelblock.hpp  voxelmap.hpp  voxelmapMultiMode.hpp  voxelmap_NoProperty.hpp  voxelmap_OctoTree.hpp  voxelmap_commontype.hpp
launch/: run.launch  rviz.rviz
msg/: cloud_info.msg
src/: PCA_TEST.cpp  Transform.cpp  featureAssociation.cpp  lidar_odometry.cpp  lidar_odometry_downsample.cpp  lidar_odometry_featureVoxelmap.cpp  lidar_odometry_featureVoxelmapNew.cpp  lidar_odometry_multiResolutionTraj.cpp  lidar_odometry_multiResolutionTraj_Mannual2.cpp  lidar_odometry_multiResolution_voxelmap.cpp  lidar_odometry_new.cpp  lidar_odometry_trajectory.cpp  lidar_odometry_trajectoryForCommonType.cpp  lidar_odometry_voxelmap.cpp  lidar_odometry_voxelmapMultiMode.cpp  lidar_odometry_voxelmap_segment.cpp  preprocess.cpp  preprocess_new.cpp
src/old/: lidar_odometry.cpp  lidar_odometry_downsample.cpp  lidar_odometry_featureVoxelmap.cpp  lidar_odometry_featureVoxelmapNew.cpp  lidar_odometry_new.cpp
src/test/: lidar_odometry_opt.cpp
